# wsssss

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
dev/: create_const_files.py
docs/: cmd.rst  conf.py  index.rst  modules.rst  requirements.txt  wsssss.constants.rst  wsssss.inlists.rst  wsssss.plotting.rst  wsssss.rst
src/wssss/: __init__.py  compare_inlist.py  constants.py  functions.py  load_data.py  setup_inlists.py
src/wssss/_bin/: check_grid.py  mesa_go.py
src/wssss/_bin/gyre_driver/: gyre_driver.py
src/wssss/constants/: __init__.py  post15140.py  pre15140.py
src/wssss/inlists/: __init__.py  check_inlist_options.py  create_grid.py  inlists.py
src/wssss/plotting/: __init__.py  plotting.py  utils.py
src/wsssss/: __init__.py  functions.py  load_data.py
src/wsssss/_bin/: check_grid.py  mesa_go.py
src/wsssss/_bin/gyre_driver/: INPUT_GYRE_4.4_ad.in  gyre_driver.py
src/wsssss/constants/: post15140.py  pre15140.py
src/wsssss/inlists/: __init__.py  check_inlist_options.py  create_grid.py  inlists.py
src/wsssss/plotting/: kipper.py  plotting.py  utils.py
tests/: common.py  test_constants.py  test_functions.py  test_load_data.py  test_plotting.py
tests/data/gyre/: profile10.data.GYRE.sgyre_l
tests/data/gyre/LOGS/: profile10.data.GYRE
tests/data/gyre/gyre_in/: gyre_ad.in_profile10.data.GYRE_l0
tests/data/inlists/: copy_this_namelist  inlist  inlist_1  inlist_2  inlist_3
tests/make_data/: create_test_data.py  history_test.list  make_data.sh  profile_test.list
tests/test_bin/: test_check_grid.py  test_gyre_driver.py  test_mesa_go.py
tests/test_inlists/: test_create_grid.py  test_inlists.py
