[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ['src']
include = ["src/wsssss/*"]
exclude = ["docs*", "tests*", "dev"]

[project]
name = "wsssss"
version = "0.0.8"
authors = [
  { name="Walter van Rossem", email="walter_v_rossem@hotmail.com" },
]
description = "Walter's set of scripts for studying stars."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "f90nml",
    "dill",
    "matplotlib",
    "setproctitle",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
license = {file = "LICENSE"}

[project.scripts]
gyre-driver = "wsssss._bin.gyre_driver:gyre_driver.run"
mesa-go = "wsssss._bin:mesa_go.run"
check-grid = "wsssss._bin:check_grid.run"

[project.urls]
Homepage = "https://github.com/waltervrossem/wsssss"
Issues = "https://github.com/waltervrossem/wsssss/issues"
Source = "https://github.com/waltervrossem/wsssss"
